@@ -61,6 +61,7 @@ main(int  argc,				/* I - Number of command-line arguments */
 		num_servers,		/* Number of servers */
 		count,			/* Number of printers sent this cycle */
 		interval,		/* Browse Interval */
+		lease,			/* Browse lease-duration */
 		continuous,		/* Run continuously? */
 		port,			/* Browse port */
 		sock,			/* Browse socket */
@@ -111,6 +112,7 @@ main(int  argc,				/* I - Number of command-line arguments */
   num_pclasses = 5;
   num_servers  = 1;
   interval     = 30;
+  lease        = 60;
   port         = 0;
   verbose      = 0;
   continuous   = 0;
@@ -120,13 +122,19 @@ main(int  argc,				/* I - Number of command-line arguments */
   {
     if (!strcmp(argv[i], "-c"))
       continuous = 1;
-    if (!strcmp(argv[i], "-v"))
-      verbose = 1;
     else if (!strcmp(argv[i], "-i"))
     {
       i ++;
       if (i < argc)
         interval = atoi(argv[i]);
+      else
+        usage();
+    }
+    else if (!strcmp(argv[i], "-l"))
+    {
+      i ++;
+      if (i < argc)
+        lease = atoi(argv[i]);
       else
         usage();
     }
@@ -162,6 +170,8 @@ main(int  argc,				/* I - Number of command-line arguments */
       else
         usage();
     }
+    else if (!strcmp(argv[i], "-v"))
+      verbose = 1;
     else if (isdigit(argv[i][0] & 255))
     {
       port = atoi(argv[i]);
@@ -171,7 +181,7 @@ main(int  argc,				/* I - Number of command-line arguments */
   }
 
   if ((num_printers <= 0 && num_pclasses <= 0) || num_servers <= 0 ||
-      interval <= 0 || port <= 0)
+      interval <= 0 || lease < 1 || port <= 0)
     usage();
 
  /*
@@ -239,11 +249,12 @@ main(int  argc,				/* I - Number of command-line arguments */
 
         snprintf(packet, sizeof(packet),
 	         "%x %x ipp://testserver-%d/printers/%s-%d \"Server Room %d\" "
-		 "\"Test Printer %d\" \"Acme Blazer 2000\"%s%s\n",
+		 "\"Test Printer %d\" \"Acme Blazer 2000\"%s%s "
+		 "lease-duration=%d\n",
                  CUPS_PRINTER_REMOTE, IPP_PRINTER_IDLE, server + 1,
 		 names[printer % 26], printer / 26 + 1, server + 1,
 		 printer + 1, options ? " ipp-options=" : "",
-		 options ? options : "");
+		 options ? options : "", lease);
 
         if (verbose)
 	  printf("[%02d:%02d:%02d] %s", curdate->tm_hour, curdate->tm_min,
@@ -271,11 +282,12 @@ main(int  argc,				/* I - Number of command-line arguments */
 
         snprintf(packet, sizeof(packet),
 	         "%x %x ipp://testserver-%d/classes/class-%s-%d \"Server Room %d\" "
-		 "\"Test Class %d\" \"Acme Blazer 2000\"%s%s\n",
+		 "\"Test Class %d\" \"Acme Blazer 2000\"%s%s "
+		 "lease-duration=%d\n",
                  CUPS_PRINTER_REMOTE | CUPS_PRINTER_CLASS, IPP_PRINTER_IDLE,
 		 server + 1, names[pclass % 26], pclass / 26 + 1, server + 1,
 		 pclass + 1, options ? " ipp-options=" : "",
-		 options ? options : "");
+		 options ? options : "", lease);
 
         if (verbose)
 	  printf("[%02d:%02d:%02d] %s", curdate->tm_hour, curdate->tm_min,
@@ -309,7 +321,8 @@ main(int  argc,				/* I - Number of command-line arguments */
 void
 usage(void)
 {
-  puts("Usage: testdirsvc [-i interval] [-o ipp-options] [-p printers] "
+  puts("Usage: testdirsvc [-c] [-i interval] [-l lease-duration] "
+       "[-o ipp-options] [-p printers] "
        "[-C classes] [-s servers] [-v] port");
   exit(0);
 }
